tests/errors/unsigned_03.py
from lpython import u32, u64

print(-u64(u32(10)))
